[gd_scene load_steps=3 format=3 uid="uid://cbo80g1hbom2"]

[ext_resource type="Script" path="res://addons/cyclops_level_builder/docks/cyclops_console/cyclops_console.gd" id="1_f4kro"]
[ext_resource type="PackedScene" uid="uid://cphtpklx81l3w" path="res://addons/cyclops_level_builder/controls/vector3_edit.tscn" id="2_qpx41"]

[node name="PanelContainer" type="PanelContainer"]
offset_right = 469.0
offset_bottom = 322.0
script = ExtResource("1_f4kro")

[node name="enable_cyclops" type="CheckBox" parent="."]
visible = false
layout_mode = 2
text = "Enable Cyclops"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Create Block"

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Position"

[node name="block_position" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/GridContainer" instance=ExtResource("2_qpx41")]
unique_name_in_owner = true
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Size"

[node name="block_size" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/GridContainer" instance=ExtResource("2_qpx41")]
unique_name_in_owner = true
layout_mode = 2
value = Vector3(1, 1, 1)

[node name="bn_create_block" type="Button" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Create Block"

[connection signal="toggled" from="enable_cyclops" to="." method="_on_enable_cyclops_toggled"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/bn_create_block" to="." method="_on_bn_create_block_pressed"]
